# activcv

./: .gitignore  DEPLOY_CLOUDRUN.md  DEPLOY_GCE.md  Dockerfile  README.md  build-gce.sh  cloudrun-deploy.yaml  deploy-cloudrun.sh  docker-compose.prod.yml  docker-compose.staging.yml  gce-deploy.yaml  gcloud_edit.txt  gcloud_output.txt  main.py  nixpacks.toml  railway.json  railway.toml  render.yaml  requirements.txt
agent/: .env.example  .env.production  .gitkeep  Dockerfile  Dockerfile.prod  Dockerfile.worker  README.md  apt-packages  cli.py  cloudbuild.yaml  deploy.py  fly.toml  install-email-validator.bat  install-langchain.bat  install-missing.bat  install-pydantic-settings.bat  main-deploy.py  main-minimal.py  main-robust.py  main.py  pyproject.toml  render.yaml  requirements-crewai-036.txt  requirements-deploy.txt  requirements-minimal.txt  requirements-production.txt  requirements.txt  run-test.bat  simple-main.py  start-now.bat  start-server.bat  start-simple.bat  test-simple.py  test_crewai_080.py  test_crewai_api.py  test_imports.py  test_imports_simple.py  test_latest_crewai.py
agent/app/: __init__.py  worker.py
agent/app/core/: auth.py  config.py  config.py.backup  database.py  exceptions.py  logging.py
agent/app/middleware/: __init__.py  rate_limiting.py  security.py  validation.py
agent/app/models/: __init__.py  cover_letter.py  job_processing.py  jobs.py  profile.py  upload.py
agent/app/services/: __init__.py  ai_service_factory.py  background_jobs.py  crew_agents.py  (+20 more)
agent/tests/: conftest.py  test_document_vault.py  test_job_processor.py
(+65 files in other folders)
