[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-cv-agent"
version = "0.1.0"
description = "AI-powered CV generation and tailoring agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "supabase>=2.3.0",
    "crewai>=0.28.8",
    "python-dotenv>=1.0.0",
    "pypdf>=3.17.4",
    "jinja2>=3.1.2",
    "weasyprint>=60.2",
    "requests>=2.31.0",
    "aiofiles>=23.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "beautifulsoup4>=4.12.2",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]